fix share button width on safari 9

--- a/src/scss/basic/_share.scss
+++ b/src/scss/basic/_share.scss
@@ -35,6 +35,7 @@
   .share__link {
     display: flex;
     align-items: center;
+    flex: 0 0 auto;
 
     margin-right: .5rem;
     padding: .375rem .375rem;
